-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
This problem has been seen on el6.8. The command 'lctl dl' fails.
This appears to be due to the "devices" entry used by the command being missing.
In older e6.x versions it is /proc/fs/lustre/devices.
In some newer distros, for example el7.3, it is /sys/kernel/debug/lustre/devices.
There isn't any lustre "devices" file anywhere in /proc or /sys. Don't know exactly why not.
- is related to
-
LU-8066 Move lustre procfs handling to sysfs and debugfs.
-
- Open
-